--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Головна</a></li>
+                <li><a href="https://github.com/yaroslav2219/Praktika1">Головна</a></li>
                 <li><a href="#vision">Про компанію</a></li>
-                <li><a href="Tomato all/index.html">Продукція</a></li>
+                <li><a href="https://yaroslav2219.github.io/Praktika2">Продукція</a></li>
                 <li><a href="#services">Сервіси</a></li>
                 <li><a href="#rd">R&D</a></li>
-                <li><a href="contact us/index.html">Контакти</a></li>
+                <li><a href="https://yaroslav2219.github.io/Praktika4">Контакти</a></li>
             </ul>
         </nav>
     </header>    
@@ -71,11 +71,11 @@
             <ul>
                 <li><a href="#">Профіль</a></li>
                 <li><a href="#vision">Менеджмент</a></li>
-                <li><a href="#products">Продукти</a></li>
+                <li><a href="https://yaroslav2219.github.io/Praktika2">Продукти</a></li>
                 <li><a href="#rd">R&D</a></li>
                 <li><a href="#links">Посилання</a></li>
                 <li><a href="#services">Карта сайта</a></li>
-                <li><a href="#contact">Контакти</a></li>
+                <li><a href="https://yaroslav2219.github.io/Praktika4">Контакти</a></li>
             </ul>
         </div>
         <div class="social-icons">
