--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="https://github.com/yaroslav2219/Praktika1">Головна</a></li>
+                <li><a href="https://yaroslav2219.github.io/Praktika1">Головна</a></li>
                 <li><a href="#vision">Про компанію</a></li>
                 <li><a href="https://yaroslav2219.github.io/Praktika2">Продукція</a></li>
                 <li><a href="#services">Сервіси</a></li>
